@@ -1,6 +1,8 @@
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.Map;
+import java.util.Optional;
 import java.util.List;
 
 class ProteinTranslator {
@@ -20,7 +22,7 @@ class ProteinTranslator {
     List<String> breakUpProteins(String rnaSequence) {
 
         List<String> proteins = new ArrayList<String>();
-        
+
         for (Integer startPos = 0; startPos < (rnaSequence.length() - 2); startPos += 3){
             proteins.add( rnaSequence.substring(startPos, startPos + 3).toString() );
         }
@@ -28,26 +30,29 @@ class ProteinTranslator {
         return proteins;
     }
 
-    String returnProteinName(String proteinSequence) {
+    Optional<String> returnProteinName(String proteinSequence) {
 
         for (String key : proteinTranslations().keySet()) {
             if(proteinTranslations().get(key).contains(proteinSequence)){
-                return key;
+                return Optional.of(key);
             }
         }
-        throw new Error("Protein not found");
+        return Optional.empty();
     }  
 
-    HashMap<String, List<String>> proteinTranslations(){
-        HashMap<String, List<String>> proteinTranslations = new HashMap<String, List<String>>();
-        proteinTranslations.put("Methionine", Arrays.asList("AUG"));
-        proteinTranslations.put("Phenylalanine", Arrays.asList("UUU","UUC"));
-        proteinTranslations.put("Leucine", Arrays.asList("UUA","UUG"));
-        proteinTranslations.put("Serine", Arrays.asList("UCU","UCC","UCA","UCG"));
-        proteinTranslations.put("Tyrosine", Arrays.asList("UAU","UAC"));
-        proteinTranslations.put("Cysteine", Arrays.asList("UGU","UGC"));
-        proteinTranslations.put("Tryptophan", Arrays.asList("UGG"));
-        proteinTranslations.put("STOP", Arrays.asList("UAA","UAG","UGA"));
-        return proteinTranslations; 
+    Map<String, List<String>> proteinTranslations(){
+        return Map.of(
+        "Methionine", List.of("AUG"),
+        "Phenylalanine", List.of("UUU","UUC"),
+        "Leucine", List.of("UUA","UUG"),
+        "Serine", List.of("UCU","UCC","UCA","UCG"),
+        "Tyrosine", List.of("UAU","UAC"),
+        "Cysteine", List.of("UGU","UGC"),
+        "Tryptophan", List.of("UGG"),
+        "STOP", List.of("UAA","UAG","UGA")); 
+    }
+
+    void test() {
+        this.returnProteinName(proteinSequence)
     }
 }
